--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "2.15.4",
+    "svix": "^1.71.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.24.2"
   },
