--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "npm-run-all": "^4.1.5",
